# ESP32-P4

./: CMakeLists.txt  client.py  sdkconfig.defaults
.githooks/: pre-commit
ServoBoardMain/: AngleSolver.cpp  AngleSolver.h  CalibrationTask.cpp  CalibrationTask.h  CanCommTask.cpp  CanCommTask.h  JointCalibrationProfile.cpp  JointCalibrationProfile.h  ServoBoardMain.ino  ServoBusManager.cpp  ServoBusManager.h  SystemTask.cpp  SystemTask.h  TaskSharedData.h  UpperCommTask.cpp  UpperCommTask.h
desktop/: calibration.py  comm_layer.py  core_logic.py  data_models.py  development_mode.py  hand_geometry.py  hand_visualizer_ui.py  joint_sequence_example.txt  modes.py  plot_hand.py  plot_hand_from_urdf.py  pose_fist_21deg.txt  protocol.py  requirements.txt  ui_main.py
desktop/__MACOSX/desktop/: ._hku_hand_v2_urdf  ._protocol.py
desktop/config/: calib_deg.json
desktop/hku_hand_v2_urdf/: CMakeLists.txt  calculate_instruct.md  hku_hand.xml  manipulability_analysis.py  package.xml
desktop/hku_hand_v2_urdf/.claude/: settings.local.json
desktop/hku_hand_v2_urdf/config/: joint_names_V2D18-URDF.yaml
desktop/hku_hand_v2_urdf/launch/: display.launch  gazebo.launch
desktop/hku_hand_v2_urdf/meshes/: 1-1_Link.STL  1-1_Link.STL.convex.stl  1-2_Link.STL  1-2_Link.STL.convex.stl  1-3_Link.STL  1-3_Link.STL.convex.stl  1-4_Link.STL  1-4_Link.STL.convex.stl  2-1_Link.STL  2-1_Link.STL.convex.stl  2-2_Link.STL  2-2_Link.STL.convex.stl  2-3_Link.STL  2-4_Link.STL  3-1_Link.STL  3-1_Link.STL.convex.stl  3-2_Link.STL  3-2_Link.STL.convex.stl  3-3_Link.STL  3-3_Link.STL.convex.stl  3-4_Link.STL  3-4_Link.STL.convex.stl  4-1_Link.STL  4-1_Link.STL.convex.stl  4-2_Link.STL  4-2_Link.STL.convex.stl  4-3_Link.STL  4-3_Link.STL.convex.stl  4-4_Link.STL  4-4_Link.STL.convex.stl  5-1_Link.STL  5-1_Link.STL.convex.stl  5-2_Link.STL  5-2_Link.STL.convex.stl  5-3_Link.STL  5-3_Link.STL.convex.stl  5-4_Link.STL  5-5_Link.STL  (+4 more)
desktop_1.0/: calibration.py  core_logic.py  data_models.py  example_algorithm.py  example_teleop.py  main.py  protocol.py  ui_main.py
desktop_1.0/config/: hand_geo.json
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
tools/: strip_utf8_bom.py  watch_strip_utf8_bom.py
(+15 files in other folders)
